--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.8.4",
+    "@types/uuid": "^9.0.6",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -45,7 +46,9 @@
     "http-status": "^1.7.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.6.1",
+    "sslcommerz-lts": "^1.1.0",
     "ts-node": "^10.9.1",
+    "uuid": "^9.0.1",
     "zod": "^3.21.4"
   }
 }
